feat: Add profile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
         </a>
     </header>
 
-    <main class="content"></main>
+    <main class="content">
+        <section class="profile wrapper wrapper_place_profile">
+            <img class="profile__avatar" src="./images/avatar_image.jpg" alt="Изображение профиля">
+            <div class="profile__info">
+                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <p class="profile__caption">Исследователь океана</p>
+                <button class="profile__edit-button" aria-label="Редактировать профиль"></button>
+            </div>
+            <button class="profile__add-button" aria-label="Добавить фотографии"></button>
+        </section>
+    </main>
 
     <footer class="footer"></footer>
     
