feat: Add elements, footer

--- a/index.html
+++ b/index.html
@@ -25,9 +25,69 @@
             </div>
             <button class="profile__add-button" aria-label="Добавить фотографии"></button>
         </section>
+
+        <section class="elements wrapper wrapper_place_elements">
+            <ul class="elements__list">
+                <li class="element">
+                    <figure class="element__rectangle">
+                        <img class="element__image" src="./images/element-image-1.jpg" 
+                        alt="Иллюстрация, 'Пляж Грандс Рокс, Нормандские острова'.">
+                        <figcaption class="element__text">Грандс Рокс</figcaption>
+                        <button class="element__like-button"></button>
+                    </figure>
+                </li>
+
+                <li class="element">
+                    <figure class="element__rectangle">
+                        <img class="element__image" src="./images/element-image-2.jpg" 
+                        alt="Иллюстрация, 'Коммуна Рабу, Франция'.">
+                        <figcaption class="element__text">Рабу</figcaption>
+                        <button class="element__like-button"></button>
+                    </figure>
+                </li>
+
+                <li class="element">
+                    <figure class="element__rectangle">
+                        <img class="element__image" src="./images/element-image-3.jpg" 
+                        alt="Иллюстрация, 'Санта Круз - штат Калифорния, США'.">
+                        <figcaption class="element__text">Санта Круз</figcaption>
+                        <button class="element__like-button"></button>
+                    </figure>
+                </li>
+
+                <li class="element">
+                    <figure class="element__rectangle">
+                        <img class="element__image" src="./images/element-image-4.jpg" 
+                        alt="Иллюстрация, 'Каполей - Гавайи, США'.">
+                        <figcaption class="element__text">Каполей</figcaption>
+                        <button class="element__like-button"></button>
+                    </figure>
+                </li>
+
+                <li class="element">
+                    <figure class="element__rectangle">
+                        <img class="element__image" src="./images/element-image-5.jpg" 
+                        alt="Иллюстрация, 'Древний сосновый лес Бристлконе - штат Калифорния, США'.">
+                        <figcaption class="element__text">Бристлконе</figcaption>
+                        <button class="element__like-button"></button>
+                    </figure>
+                </li>
+
+                <li class="element">
+                    <figure class="element__rectangle">
+                        <img class="element__image" src="./images/element-image-6.jpg" 
+                        alt="Иллюстрация, 'Грейт-Санд-Дьюнс - штат Колорадо, США'.">
+                        <figcaption class="element__text">Грейт-Санд-Дьюнс</figcaption>
+                        <button class="element__like-button"></button>
+                    </figure>
+                </li>
+            </ul>
+        </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer wrapper wrapper_place_footer">
+        <p class="footer__caption">&copy; Mesto Russia</p>
+    </footer>
     
 </body>
 </html>
