--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Проектная работа: 'Место', автор - Вероника Павличенко. Данный веб-ресурс дает возможность пользователям делиться фотографиями своих путешествий по миру.">
     <link rel="stylesheet" href="./pages/index.css">
     <title>Mesto</title>
 </head>
@@ -19,8 +20,8 @@
         <section class="profile wrapper wrapper_place_profile">
             <img class="profile__avatar" src="./images/avatar_image.jpg" alt="Изображение профиля">
             <div class="profile__info">
-                <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <p class="profile__caption">Исследователь океана</p>
+                <h1 class="profile__name"></h1>
+                <p class="profile__caption"></p>
                 <button class="profile__edit-button" aria-label="Редактировать профиль"></button>
             </div>
             <button class="profile__add-button" aria-label="Добавить фотографии"></button>
@@ -33,7 +34,7 @@
                         <img class="element__image" src="./images/element-image-1.jpg" 
                         alt="Иллюстрация, 'Пляж Грандс Рокс, Нормандские острова'.">
                         <figcaption class="element__text">Грандс Рокс</figcaption>
-                        <button class="element__like-button"></button>
+                        <button class="element__like-button" aria-label="Поставить 'Нравится'"></button>
                     </figure>
                 </li>
 
@@ -42,7 +43,7 @@
                         <img class="element__image" src="./images/element-image-2.jpg" 
                         alt="Иллюстрация, 'Коммуна Рабу, Франция'.">
                         <figcaption class="element__text">Рабу</figcaption>
-                        <button class="element__like-button"></button>
+                        <button class="element__like-button" aria-label="Поставить 'Нравится'"></button>
                     </figure>
                 </li>
 
@@ -51,7 +52,7 @@
                         <img class="element__image" src="./images/element-image-3.jpg" 
                         alt="Иллюстрация, 'Санта Круз - штат Калифорния, США'.">
                         <figcaption class="element__text">Санта Круз</figcaption>
-                        <button class="element__like-button"></button>
+                        <button class="element__like-button" aria-label="Поставить 'Нравится'"></button>
                     </figure>
                 </li>
 
@@ -60,7 +61,7 @@
                         <img class="element__image" src="./images/element-image-4.jpg" 
                         alt="Иллюстрация, 'Каполей - Гавайи, США'.">
                         <figcaption class="element__text">Каполей</figcaption>
-                        <button class="element__like-button"></button>
+                        <button class="element__like-button" aria-label="Поставить 'Нравится'"></button>
                     </figure>
                 </li>
 
@@ -69,7 +70,7 @@
                         <img class="element__image" src="./images/element-image-5.jpg" 
                         alt="Иллюстрация, 'Древний сосновый лес Бристлконе - штат Калифорния, США'.">
                         <figcaption class="element__text">Бристлконе</figcaption>
-                        <button class="element__like-button"></button>
+                        <button class="element__like-button" aria-label="Поставить 'Нравится'"></button>
                     </figure>
                 </li>
 
@@ -78,7 +79,7 @@
                         <img class="element__image" src="./images/element-image-6.jpg" 
                         alt="Иллюстрация, 'Грейт-Санд-Дьюнс - штат Колорадо, США'.">
                         <figcaption class="element__text">Грейт-Санд-Дьюнс</figcaption>
-                        <button class="element__like-button"></button>
+                        <button class="element__like-button" aria-label="Поставить 'Нравится'"></button>
                     </figure>
                 </li>
             </ul>
@@ -88,6 +89,18 @@
     <footer class="footer wrapper wrapper_place_footer">
         <p class="footer__caption">&copy; Mesto Russia</p>
     </footer>
-    
+
+    <div class="popup">
+        <div class="popup__container" name="info">
+            <form class="edit-form">
+                <h2 class="edit-form__title">Редактировать профиль</h2>
+                <input class="edit-form__input" type="text" id="profile-name" value="" aria-label="Имя" placeholder="Имя" name="Name" required minlength="2" maxlength="60">
+                <input class="edit-form__input" type="text" id="profile-caption" value="" aria-label="О себе" placeholder="О себе" name="Caption" required minlength="2" maxlength="200">
+                <button class="edit-form__submit-button" type="submit" value="Сохранить" aria-label="Сохранить">Сохранить</button>
+                <button class="edit-form__close-button" type="reset" value="" aria-label="Закрыть"></button>
+            </form>
+        </div>
+    </div>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
