feat: Added delete photos button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         alt="Иллюстрация, 'Пляж Грандс Рокс, Нормандские острова'.">
                         <figcaption class="element__text">Грандс Рокс</figcaption>
                     </figure>
+                    <button class="element__delete-button" type="button" aria-label="Удалить фотографию"></button>
                     <button class="element__like-button" type="button" aria-label="Поставить 'Нравится'"></button>
                 </li>
 
@@ -44,6 +45,7 @@
                         alt="Иллюстрация, 'Коммуна Рабу, Франция'.">
                         <figcaption class="element__text">Рабу</figcaption>
                     </figure>
+                    <button class="element__delete-button" type="button" aria-label="Удалить фотографию"></button>
                     <button class="element__like-button" type="button" aria-label="Поставить 'Нравится'"></button>
                 </li>
 
@@ -53,6 +55,7 @@
                         alt="Иллюстрация, 'Санта Круз - штат Калифорния, США'.">
                         <figcaption class="element__text">Санта Круз</figcaption>
                     </figure>
+                    <button class="element__delete-button" type="button" aria-label="Удалить фотографию"></button>
                     <button class="element__like-button" type="button" aria-label="Поставить 'Нравится'"></button>
                 </li>
 
@@ -62,6 +65,7 @@
                         alt="Иллюстрация, 'Каполей - Гавайи, США'.">
                         <figcaption class="element__text">Каполей</figcaption>
                     </figure>
+                    <button class="element__delete-button" type="button" aria-label="Удалить фотографию"></button>
                     <button class="element__like-button" type="button" aria-label="Поставить 'Нравится'"></button>
                 </li>
 
@@ -71,6 +75,7 @@
                         alt="Иллюстрация, 'Древний сосновый лес Бристлконе - штат Калифорния, США'.">
                         <figcaption class="element__text">Бристлконе</figcaption>
                     </figure>
+                    <button class="element__delete-button" type="button" aria-label="Удалить фотографию"></button>
                     <button class="element__like-button" type="button" aria-label="Поставить 'Нравится'"></button>
                 </li>
 
@@ -80,6 +85,7 @@
                         alt="Иллюстрация, 'Грейт-Санд-Дьюнс - штат Колорадо, США'.">
                         <figcaption class="element__text">Грейт-Санд-Дьюнс</figcaption>
                     </figure>
+                    <button class="element__delete-button" type="button" aria-label="Удалить фотографию"></button>
                     <button class="element__like-button" type="button" aria-label="Поставить 'Нравится'"></button>
                 </li>
             </ul>
